--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=bootEx
+#server.port=7070
 
 # 데이터베이스 연결 설정
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
