--- a/.gitignore
+++ b/.gitignore
@@ -93,4 +93,6 @@ local.properties
 hs_err_pid*
 replay_pid*
 
+
+application.properties
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse
