--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=bootEx
 
 # 데이터베이스 연결 설정
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=board
+spring.datasource.username=ora_user
 spring.datasource.password=1234
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
