--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=bootEx
-#server.port=7070
+server.port=7070
 
 # 데이터베이스 연결 설정
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=ora_user
+spring.datasource.username=board
 spring.datasource.password=1234
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
