--- a/booking/pom.xml
+++ b/booking/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.booking</groupId>
 	<artifactId>boot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>boot</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -29,6 +29,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 	<dependencies>
 		<dependency>
