--- a/booking/pom.xml
+++ b/booking/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.booking</groupId>
 	<artifactId>boot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<name>boot</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
