--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=bootEx
 server.port=8080
 
 # 데이터베이스 연결 설정
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.56.1:1521:xe
 spring.datasource.username=board
 spring.datasource.password=1234
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
