--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.application.name=boot
 server.port=8080
 
 # 데이터베이스 연결 설정
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.56.1:1521:xe
-spring.datasource.username=board
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.56.1:1521:xe
+spring.datasource.url=jdbc:log4jdbc:mysql://database-dev.c3mo2egwcp7b.ap-northeast-2.rds.amazonaws.com:3306/booking?useSSL=false&serverTimezone=Asia/Seoul
+spring.datasource.username=admin
+spring.datasource.password=awsdb1234
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
 # JSP 뷰 경로
