--- a/booking/src/main/resources/applications.properties
+++ b/booking/src/main/resources/applications.properties
@@ -1,54 +1,19 @@
-spring.application.name=ApiRound
+spring.application.name=boot
 server.port=8080
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-spring.mvc.view.expose-context-beans-as-attributes=true
 
-# ??? REST API ?
-
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+# 데이터베이스 연결 설정
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.56.1:1521:xe
 spring.datasource.username=board
 spring.datasource.password=1234
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:log4jdbc:mysql://database-dev.c3mo2egwcp7b.ap-northeast-2.rds.amazonaws.com:3306/booking?useSSL=false&serverTimezone=Asia/Seoul
+#spring.datasource.username=admin
+#spring.datasource.password=awsdb1234
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
-spring.jpa.hibernate.ddl-auto=none
+# JSP 뷰 경로
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
 
-server.error.include-message=always
-server.error.include-stacktrace=always
-server.error.include-binding-errors=always
 
-# ì¹´ì¹´ì¤ REST API í¤ (Local API ì¬ì©ì©)
-kakao.rest-api-key=YOUR_REST_API_KEY_HERE
-
-mybatis.configuration.map-underscore-to-camel-case=true
-
-mybatis.mapper-locations=classpath:mapper/*.xml
-
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-logging.level.org.mybatis=DEBUG
-logging.level.org.apache.ibatis=DEBUG
-
-mybatis.type-aliases-package=com.example.ApiRound.dto
-
-spring.messages.encoding=UTF-8
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
-server.servlet.encoding.charset=UTF-8
-server.servlet.encoding.enabled=true
-server.servlet.encoding.force=true
-
-spring.mvc.view.content-type=text/html;charset=UTF-8
-spring.mvc.view.character-encoding=UTF-8
-
-file.encoding=UTF-8
-sun.jnu.encoding=UTF-8
-
-kakao.client-id=test
-kakao.redirect-uri=test
-
-google.client-id=test
-google.redirect-uri=test
-google.client-secret=test
-
+file.upload.upload_dir = D:/dev/upload
