--- a/booking/pom.xml
+++ b/booking/pom.xml
@@ -29,7 +29,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-		<maven.test.skip>true</maven.test.skip>
+		
 	</properties>
 	<dependencies>
 		<dependency>
@@ -99,6 +99,7 @@
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-devtools</artifactId>
 	    <optional>true</optional>
+			<scope>runtime</scope>
   	</dependency>
   
 	<dependency>
@@ -142,6 +143,15 @@
 		</dependency>
   
   
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
