--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -1,22 +1,24 @@
 spring.application.name=boot
 server.port=8080
 
-# 데이터베이스 연결 설정
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.56.1:1521:xe
-spring.datasource.url=jdbc:log4jdbc:mysql://database-dev.c3mo2egwcp7b.ap-northeast-2.rds.amazonaws.com:3306/booking?useSSL=false&serverTimezone=Asia/Seoul
-spring.datasource.username=admin
-spring.datasource.password=awsdb1234
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-
 # JSP 뷰 경로
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-# HikariCP (Spring Boot 기본 풀) 설정
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.connection-timeout=30000
+# 데이터베이스 연결 설정
+spring.datasource.url=jdbc:mysql://localhost:3308/edudb?useSSL=false&serverTimezone=Asia/Seoul
+spring.datasource.username=admin
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA 관련 설정 (Hibernate 사용시)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+logging.level.org.springframework.data.jpa=DEBUG
+
+
 
 file.upload.upload_dir = D:/dev/upload
