--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # 데이터베이스 연결 설정
-spring.datasource.url=jdbc:mysql://localhost:3306/edudb?useSSL=false&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/edudb?serverTimezone=Asia/Seoul
 spring.datasource.username=admin
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
