--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # 데이터베이스 연결 설정
-spring.datasource.url=jdbc:mysql://localhost:3306/edudb?useSSL=false&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/edudb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Seoul
 spring.datasource.username=admin
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,6 +17,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
 
 logging.level.org.springframework.data.jpa=DEBUG
 
