--- a/booking/src/main/resources/applications.properties
+++ b/booking/src/main/resources/applications.properties
@@ -1,19 +1,30 @@
+
 spring.application.name=boot
-server.port=8080
+server.port=80
 
-# 데이터베이스 연결 설정
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.56.1:1521:xe
-spring.datasource.username=board
-spring.datasource.password=1234
-#spring.datasource.url=jdbc:log4jdbc:mysql://database-dev.c3mo2egwcp7b.ap-northeast-2.rds.amazonaws.com:3306/booking?useSSL=false&serverTimezone=Asia/Seoul
-#spring.datasource.username=admin
-#spring.datasource.password=awsdb1234
-#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-
-# JSP 뷰 경로
+# JSP \uBDF0 \uACBD\uB85C
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+# \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC5F0\uACB0 \uC124\uC815
 
-file.upload.upload_dir = D:/dev/upload
+spring.datasource.url=jdbc:mysql://edudb.c5ekis44u3n2.ap-northeast-2.rds.amazonaws.com:3306/edudb?serverTimezone=Asia/Seoul
+spring.datasource.username=admin
+spring.datasource.password=Ehfkdl32!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA \uAD00\uB828 \uC124\uC815 (Hibernate \uC0AC\uC6A9\uC2DC)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
+
+logging.level.org.springframework.data.jpa=DEBUG
+
+
+
+file.upload.upload_dir = /home/ubuntu/upload/
+file.upload.upload_dir = C:/dev/upload
