--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -26,4 +26,4 @@ logging.level.org.springframework.data.jpa=DEBUG
 
 
 
-file.upload.upload_dir = C:/dev/upload
+file.upload.upload_dir = /home/ubuntu/upload/
