--- a/booking/src/main/resources/application.properties
+++ b/booking/src/main/resources/application.properties
@@ -25,5 +25,5 @@ spring.servlet.multipart.max-request-size=100MB
 logging.level.org.springframework.data.jpa=DEBUG
 
 
-
-file.upload.upload_dir = /home/ubuntu/upload/
+file.upload.upload_dir = C:/dev/upload/
+#file.upload.upload_dir = /home/ubuntu/upload/
